--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 body{
-    background-color: blueviolet;
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-height: 100%;
+    overflow: auto;  
+
 }
 @media screen
 and (min-width: 480px){
